<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:gravity="center"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/relative_layout"
                android:onClick="abrirRelativeLayout"
                android:layout_weight="1"
                ></Button>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="abrirAbsoluteLayout"
                android:text="@string/absolute_layout"
                android:layout_weight="1"
                ></Button>

            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="abrirFrameLayout"
                android:text="@string/frame_layout"
                />

    </LinearLayout>
</ScrollView>